hmtl5 storage presentation changes
images added to solution

--- a/HTML5_Client_storage_technologies/index.html
+++ b/HTML5_Client_storage_technologies/index.html
@@ -39,7 +39,7 @@
             </section>
             <section data-id="c99d5848fd476bf63e83eda234c27193">
                 <h2>Client storage?</h2>
-                <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/denispasovski/images/350528/XCAcEzT.jpg" style="width: 519px; height: 519px; max-height: none; max-width: none;" class="fragment" data-fragment-index="0">
+                <img src="img/meme_morpheus.jpg" style="width: 519px; height: 519px; max-height: none; max-width: none;" class="fragment" data-fragment-index="0">
             </section>
             <section data-id="0dafcb4450d18d07edd53949c717f91f">
                 <h2>HTML 5 Client storage Technologies</h2>
@@ -187,11 +187,11 @@
                 </section>
                 <section data-id="02e75ac5c28e01cd10d82cfd102058c7">
                     <h2>Indexed DB model</h2>
-                    <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/denispasovski/images/350518/dasda2.png" style="width: 913.5849056603773px; height: 269px; max-height: none; max-width: none;">
+                    <img src="img/idb_structure.png" style="width: 913.5849056603773px; height: 269px; max-height: none; max-width: none;">
                 </section>
                 <section data-id="a92b42a24407721cadb6d4a0118f6005">
                     <h2>Indexed DB requesT</h2>
-                    <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/denispasovski/images/350502/sasa.png">
+                    <img src="img/idb_request.png">
                 </section>
                 <section data-id="afc656d4bedf801187cacf038dbe54dd">
                     <h2>Can I use Indexed DB</h2>
@@ -700,7 +700,7 @@
                 </section>
                 <section data-id="52150e3678f3230f8cf28b0598d5c7e8">
                     <h2>File system request</h2>
-                    <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/denispasovski/images/350550/dasda22.png">
+                    <img src="img/fs_request.png">
                 </section>
                 <section data-id="c456f762b5ef9f82393dccd2b1272225">
                     <h2>Can I use File System API</h2>
@@ -874,10 +874,11 @@
             <section data-id="10c4ebcb187e8b210eb5e31acd6c46f9">
                 <h2>Note From Author</h2>
                 <div class="fragment" data-fragment-index="0">Data on the client side can be lost at any time!</div>
-                <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/denispasovski/images/350526/RBdS9ot.jpg" style="width: 638.6666666666666px; height: 479px; max-height: none; max-width: none;" class="fragment" data-fragment-index="0">
+                <img src="img/meme_backup.jpg" style="width: 638.6666666666666px; height: 479px; max-height: none; max-width: none;" class="fragment" data-fragment-index="0">
             </section>
             <section data-id="e5b610061f767803ab800d9d55b284cb">
                 <h2>Questions</h2>
+				<br />
                 <div>
                     <font style="font-size: 200px;">?</font>
                 </div>
@@ -885,7 +886,7 @@
             <section data-id="5324d6d7f2f25f30b5eeb5daf7f3a885">
                 <h2>Demo</h2>
                 <div>
-                    <img src="http://www.pixelstech.net/article/images/matrix.png" style="width: 659.484649122807px; height: 523px; max-height: none; max-width: none;">
+                    <img src="img/matrix.png" style="width: 659.484649122807px; height: 523px; max-height: none; max-width: none;">
                     <br>
                 </div>
             </section>
@@ -953,7 +954,7 @@
             controls: true,
             progress: true,
             history: true,
-            center: true,
+            center: false,
 
             theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
             transition:  'linear', // default/cube/page/concave/zoom/linear/fade/none
