client storage presentation changes
title updated, date and place added

--- a/HTML5_Client_storage_technologies/index.html
+++ b/HTML5_Client_storage_technologies/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>reveal.js - The HTML Presentation Framework</title>
-    <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-    <meta name="author" content="Hakim El Hattab">
+    <title>Overview of the HTML 5 client storage technologies</title>
+    <meta name="description" content="Overview of the HTML 5 client storage technologies">
+    <meta name="author" content="Deni Spasovski">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -36,6 +36,9 @@
                 <div>
                     denimf @ <a href="https://twitter.com/denimf">twitter</a>/<a href="https://github.com/denimf">github</a>/<a href="denimf@gmail.com">gmail</a>
                 </div>
+				<div>
+					16 April 2014 @ <a href="http://www.meetup.com/nychtml5/">NYC HTML5 meetup</a>
+				</div>
             </section>
             <section data-id="c99d5848fd476bf63e83eda234c27193">
                 <h2>Client storage?</h2>
