qr code fix - info fix

--- a/HTML5_Client_storage_technologies/index.html
+++ b/HTML5_Client_storage_technologies/index.html
@@ -993,7 +993,7 @@
                 <div>
                     <ul>
                         <li>
-                            <a href="https://github.com/denimf/HTML5ClientSideStorageSamples">https://github.com/denimf/HTML5ClientSideStorageSamples</a>
+                            <a href="https://github.com/denispasovski/HTML5ClientSideStorageSamples">https://github.com/denispasovski/HTML5ClientSideStorageSamples</a>
                             <br>
                         </li>
                         <li>
@@ -1033,10 +1033,7 @@
                 <div>
                     <h2 style="font-style: normal; font-variant: normal;">OVERVIEW OF THE HTML 5 CLIENT STORAGE TECHNOLOGIES</h2>
                     <h3 style="font-style: normal; font-variant: normal;">BY DENI SPASOVSKI</h3>
-                    <div style="font-size: 36px; font-style: normal; font-variant: normal;">
-                        denimf @&nbsp;<a href="https://twitter.com/denimf">twitter</a>/<a href="https://github.com/denimf">github</a>/<a href="https://slides.com/denispasovski/html-5-client-storage-technologies/denimf@gmail.com">gmail</a>
-                    </div>
-                    <img src="https://s3.amazonaws.com/media-p.slid.es/uploads/denispasovski/images/350521/qrcode.21670384.png">
+                    <img src="img/qrcode.png">
                     <br>
                 </div>
             </section>
