added data for IE 2015

--- a/HTML5_Client_storage_technologies/index.html
+++ b/HTML5_Client_storage_technologies/index.html
@@ -297,15 +297,15 @@
                         </ul>
                     </div>
                 </section>
-                <section data-id="d94c6be9284260c97289ec397db413aa">
+                <section data-id="d94c6be9284260c97289ec397db413aa" style="display: block; margin-left: -20%; width: 140%;">
                     <h2>
                         Performance hdd vs&nbsp;<span style="font-size: 75.96px;">SSD</span>
                     </h2>
                     <table>
                         <tbody>
                             <tr>
-                                <td></td>
-                                <td align="right" style="text-align: right; ">
+                                <td style="text-align: right; width:140px;"></td>
+                                <td align="right" style="text-align: right;">
                                     <font style="font-size: 24px;">FF (2014)</font>
                                 </td>
                                 <td align="right" style="text-align: right; ">
@@ -325,6 +325,9 @@
                                 </td>
                                 <td align="right" style="text-align: right; ">
                                     <font style="font-size: 24px;">IE (80K)</font>
+                                </td>
+								<td align="right" style="text-align: right; ">
+                                    <font style="font-size: 24px;">IE (80K) (2015)</font>
                                 </td>
                             </tr>
                             <tr>
@@ -352,6 +355,9 @@
                                 <td align="right" style="text-align: right; ">
                                     <font style="font-size: 24px;">96253</font>
                                 </td>
+								<td align="right" style="text-align: right; ">
+                                    <font style="font-size: 24px;">39740</font>
+                                </td>
                             </tr>
                             <tr>
                                 <td style="text-align: left;">
@@ -377,6 +383,9 @@
                                 </td>
                                 <td align="right" style="text-align: right; ">
                                     <font style="font-size: 24px;">28</font>
+                                </td>
+								<td align="right" style="text-align: right; ">
+                                    <font style="font-size: 24px;">30</font>
                                 </td>
                             </tr>
                             <tr>
@@ -404,6 +413,9 @@
                                 <td align="right" style="text-align: right; ">
                                     <font style="font-size: 24px;">63783</font>
                                 </td>
+								<td align="right" style="text-align: right; ">
+                                    <font style="font-size: 24px;">30502</font>
+                                </td>
                             </tr>
                             <tr>
                                 <td style="text-align: left;">
@@ -429,6 +441,9 @@
                                 </td>
                                 <td align="right" style="text-align: right; ">
                                     <font style="font-size: 24px;">25615</font>
+                                </td>
+								<td align="right" style="text-align: right; ">
+                                    <font style="font-size: 24px;">7275</font>
                                 </td>
                             </tr>
                             <tr>
@@ -456,6 +471,9 @@
                                 <td align="right" style="text-align: right; vertical-align: bottom;">
                                     <font style="font-size: 24px;">2904</font>
                                 </td>
+								<td align="right" style="text-align: right; vertical-align: bottom;">
+                                    <font style="font-size: 24px;">839 </font>
+                                </td>
                             </tr>
                             <tr>
                                 <td style="text-align: left;">
@@ -482,6 +500,117 @@
                                 <td align="right" style="text-align: right; vertical-align: bottom;">
                                     <font style="font-size: 24px;">3923</font>
                                 </td>
+								<td align="right" style="text-align: right; vertical-align: bottom;">
+                                    <font style="font-size: 24px;">1058</font>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    results are in milliseconds
+                </section>
+				<section data-id="d94c6be9284260c97289ec397db413aa" style="display: block; ">
+                    <h2>
+                        Performance Overview 2015
+                    </h2>
+                    <table id="table2015">
+                        <tbody>
+                            <tr>
+                                <td style="text-align: right; width:240px;"></td>
+								<td style="text-align: right; " align="right">
+                                    <font style="">SSD FF (2015)</font>
+                                </td>
+								<td style="text-align: right; " align="right">
+                                    <font style="">SSD Chrome (2015)</font>
+                                </td>
+                                
+								<td style="text-align: right; " align="right">
+                                    <font style="">IE (80K) (2015)</font>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: left;">
+                                    <font style="">total</font>
+                                </td>
+								<td style="text-align: right; " align="right">
+                                    <font style="">40043</font>
+                                </td>
+								<td style="text-align: right; " align="right">
+                                    <font style="">16988</font>
+                                </td>
+								<td style="text-align: right; " align="right">
+                                    <font style="">39740</font>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: left;">
+                                    <font style="">delete</font>
+                                </td>
+								<td style="text-align: right; " align="right">
+                                    <font style="">45</font>
+                                </td>
+								<td style="text-align: right; " align="right">
+                                    <font style="">2500</font>
+                                </td>
+								<td style="text-align: right; " align="right">
+                                    <font style="">30</font>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: left;">
+                                    <font style="">init</font>
+                                </td>
+								<td style="text-align: right; " align="right">
+                                    <font style="">18046</font>
+                                </td>
+								<td style="text-align: right; " align="right">
+                                    <font style="">8633</font>
+                                </td>
+                                
+								<td style="text-align: right; " align="right">
+                                    <font style="">30502</font>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: left;">
+                                    <font style="">search</font>
+                                </td>
+								 <td style="text-align: right; " align="right">
+                                    <font style="">8814</font>
+                                </td>
+								<td style="text-align: right; " align="right">
+                                    <font style="">5049</font>
+                                </td>
+								<td style="text-align: right; " align="right">
+                                    <font style="">7275</font>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: left;">
+                                    <font style="">key search</font>
+                                </td>
+								<td style="text-align: right; vertical-align: bottom;" align="right">
+                                    <font style="">11088</font>
+                                </td>
+								<td style="text-align: right; vertical-align: bottom;" align="right">
+                                    <font style="">356</font>
+                                </td>
+								<td style="text-align: right; vertical-align: bottom;" align="right">
+                                    <font style="">839 </font>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="text-align: left;">
+                                    <font style="">range search</font>
+                                </td>
+								<td style="text-align: right; vertical-align: bottom;" align="right">
+                                    <font style="">2030</font>
+                                </td>
+								<td style="text-align: right; vertical-align: bottom;" align="right">
+                                    <font style="">431</font>
+                                </td>
+								<td style="text-align: right; vertical-align: bottom;" align="right">
+                                    <font style="">1058</font>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
@@ -492,48 +621,62 @@
                     <table>
                         <tbody>
                             <tr>
-                                <td></td>
-                                <td style="text-align: right; ">10K</td>
-                                <td style="text-align: right; ">80K</td>
-                                <td style="text-align: right; ">500K</td>
+                                <td style="text-align: right; width:200px;"></td>
+                                <td style="text-align: right; ">10K (2014)</td>
+                                <td style="text-align: right; ">80K (2014)</td>
+								<td style="text-align: right; ">80K (2015)</td>
+								<td style="text-align: right; ">500K (2014)</td>
+                                <td style="text-align: right; ">500K (2015)</td>
                             </tr>
                             <tr>
                                 <td>total</td>
                                 <td align="right" style="text-align: right; ">12643</td>
                                 <td align="right" style="text-align: right; ">96253</td>
+								<td align="right" style="text-align: right; ">39740</td>
+                                <td style="text-align: right; ">n/a</td>
                                 <td style="text-align: right; ">n/a</td>
                             </tr>
                             <tr>
                                 <td>delete</td>
                                 <td align="right" style="text-align: right; ">26</td>
                                 <td align="right" style="text-align: right; ">28</td>
+								<td align="right" style="text-align: right; ">30</td>
+                                <td style="text-align: right; ">n/a</td>
                                 <td style="text-align: right; ">n/a</td>
                             </tr>
                             <tr>
                                 <td>init</td>
                                 <td align="right" style="text-align: right; ">7617</td>
                                 <td align="right" style="text-align: right; ">63783</td>
+								<td align="right" style="text-align: right; ">30502</td>
+                                <td style="text-align: right; ">n/a</td>
                                 <td style="text-align: right; ">n/a</td>
                             </tr>
                             <tr>
                                 <td>search</td>
                                 <td align="right" style="text-align: right; ">4069</td>
                                 <td align="right" style="text-align: right; ">25615</td>
+								<td align="right" style="text-align: right; ">7275</td>
+                                <td style="text-align: right; ">n/a</td>
                                 <td style="text-align: right; ">n/a</td>
                             </tr>
                             <tr>
                                 <td>key search</td>
-                                <td align="right" style="text-align: right; ">415</td>
-                                <td align="right" style="text-align: right; ">2904</td>
-                                <td style="text-align: right; ">n/a</td>
+                                <td align="right" style="text-align: right; vertical-align: bottom;">415</td>
+                                <td align="right" style="text-align: right; vertical-align: bottom;">2904</td>
+								<td align="right" style="text-align: right; vertical-align: bottom;">839</td>
+                                <td style="text-align: right; vertical-align: bottom;">n/a</td>
+                                <td style="text-align: right; vertical-align: bottom;">n/a</td>
                             </tr>
                             <tr>
                                 <td>
                                     range search
                                 </td>
-                                <td align="right" style="text-align: right; ">516</td>
-                                <td align="right" style="text-align: right; ">3923</td>
-                                <td style="text-align: right; ">n/a</td>
+                                <td align="right" style="text-align: right; vertical-align: bottom;">516</td>
+                                <td align="right" style="text-align: right; vertical-align: bottom;">3923</td>
+								<td align="right" style="text-align: right; vertical-align: bottom;">1058</td>
+                                <td style="text-align: right; vertical-align: bottom;">n/a</td>
+                                <td style="text-align: right; vertical-align: bottom;">n/a</td>
                             </tr>
                         </tbody>
                     </table>
@@ -544,7 +687,7 @@
                     <table>
                         <tbody>
                             <tr>
-                                <td></td>
+                                <td style="text-align: right; width:200px;"></td>
                                 <td style="text-align: right; ">10K (2014)</td>
                                 <td style="text-align: right; ">100K (2014)</td>
 								<td style="text-align: right; ">100K (2015)</td>
@@ -608,7 +751,7 @@
                     <table>
                         <tbody>
                             <tr>
-                                <td style="text-align: right; "></td>
+                                <td style="text-align: right; width:200px;"></td>
                                 <td style="text-align: right; ">
                                     <font>10K (2014)</font>
                                 </td>
