safari added partial support to indexeedb

--- a/HTML5_Client_storage_technologies/index.html
+++ b/HTML5_Client_storage_technologies/index.html
@@ -234,7 +234,7 @@
                                     <font >17</font>
                                 </td>
                                 <td style="text-align: center; ">
-                                    <font >n/a</font>
+                                    <font >8 (partial)</font>
                                 </td>
                             </tr>
                         </tbody>
@@ -272,7 +272,7 @@
                                     <font >10</font>
                                 </td>
                                 <td style="text-align: center; ">
-                                    <font >n/a</font>
+                                    <font >8.3 (partial)</font>
                                 </td>
                             </tr>
                         </tbody>
